# clash_auto_switch

./: .gitignore  README.md  pyproject.toml
clash_auto_switch/: __main__.py  clash_api.py  entry.py  main.py  monitor.py  project.py  storage.py  unlock_tester.py
