[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clash-auto-switch"
version = "0.1.0"
description = "Automatic proxy switching for Clash based on service availability testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28.1",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
clash-auto-switch = "clash_auto_switch.main:main"
